<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <EditText
        android:id="@+id/editTextFirstNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextEmailAddressRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextHomePhoneRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextMobilePhoneRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/mobile_phone_number"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/dropdown_menu_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Services"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/dropdown_menu_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Sites"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/buttonRegisterRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/buttonLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account" />


</LinearLayout>